@@ -12,6 +12,7 @@
 #include "include/codec/SkEncodedOrigin.h"
 #include "include/core/SkImageInfo.h"
 #include "include/core/SkStream.h"
+#include "src/codec/SkFrameHolder.h"
 #include "src/codec/SkSwizzler.h"
 
 #if __has_include("HeifDecoderAPI.h")
@@ -27,7 +28,8 @@ public:
     /*
      * Assumes IsHeif was called and returned true.
      */
-    static std::unique_ptr<SkCodec> MakeFromStream(std::unique_ptr<SkStream>, Result*);
+    static std::unique_ptr<SkCodec> MakeFromStream(
+            std::unique_ptr<SkStream>, SkCodec::SelectionPolicy selectionPolicy, Result*);
 
 protected:
 
@@ -41,6 +43,15 @@ protected:
         return SkEncodedImageFormat::kHEIF;
     }
 
+#ifndef SK_LEGACY_HEIF_API
+    int onGetFrameCount() override;
+    bool onGetFrameInfo(int, FrameInfo*) const override;
+    int onGetRepetitionCount() override;
+    const SkFrameHolder* getFrameHolder() const override {
+        return &fFrameHolder;
+    }
+#endif
+
     bool conversionSupported(const SkImageInfo&, bool, bool) override;
 
     bool onRewind() override;
@@ -50,7 +61,11 @@ private:
      * Creates an instance of the decoder
      * Called only by NewFromStream
      */
-    SkHeifCodec(SkEncodedInfo&&, HeifDecoder*, SkEncodedOrigin);
+    SkHeifCodec(SkEncodedInfo&&, HeifDecoder*, SkEncodedOrigin
+#ifndef SK_LEGACY_HEIF_API
+                , bool animation
+#endif
+                );
 
     void initializeSwizzler(const SkImageInfo& dstInfo, const Options& options);
     void allocateStorage(const SkImageInfo& dstInfo);
@@ -73,7 +88,47 @@ private:
     uint32_t*                          fColorXformSrcRow;
 
     std::unique_ptr<SkSwizzler>        fSwizzler;
+#ifndef SK_LEGACY_HEIF_API
+    bool                               fUseAnimation;
 
+    class Frame : public SkFrame {
+    public:
+        Frame(int i) : INHERITED(i) {}
+
+    protected:
+        SkEncodedInfo::Alpha onReportedAlpha() const override {
+            return SkEncodedInfo::Alpha::kOpaque_Alpha;
+        }
+
+    private:
+        typedef SkFrame INHERITED;
+    };
+
+    class FrameHolder : public SkFrameHolder {
+    public:
+        ~FrameHolder() override {}
+        void setScreenSize(int w, int h) {
+            fScreenWidth = w;
+            fScreenHeight = h;
+        }
+        Frame* appendNewFrame();
+        const Frame* frame(int i) const;
+        int size() const {
+            return static_cast<int>(fFrames.size());
+        }
+        void reserve(int size) {
+            fFrames.reserve(size);
+        }
+
+    protected:
+        const SkFrame* onGetFrame(int i) const override;
+
+    private:
+        std::vector<Frame> fFrames;
+    };
+
+    FrameHolder fFrameHolder;
+#endif // SK_LEGACY_HEIF_API
     typedef SkCodec INHERITED;
 };
 
